[gd_scene load_steps=15 format=2]

[ext_resource path="res://game/bolt/NodeShadow.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sound/sfx/_pa/burst/burst.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sound/sfx/_pa/skills/skill_cling.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/tilesets/tileset_arena_elements.png" type="Texture" id=4]
[ext_resource path="res://game/arena/bricks/BrickGhost.gd" type="Script" id=5]

[sub_resource type="PhysicsMaterial" id=7]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.714932, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 3, 3, 0 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -30.14
color_ramp = SubResource( 9 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4, 4 )

[sub_resource type="OccluderPolygon2D" id=16]
polygon = PoolVector2Array( -3, 3, -3, -3, 3, -3, 3, 3 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 5, 5 )

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../part_Points:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.7, 0.7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../part_Points:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AudioStreamRandomPitch" id=15]
audio_stream = ExtResource( 2 )
random_pitch = 1.05

[node name="GhostBrick" type="StaticBody2D"]
collision_layer = 5
physics_material_override = SubResource( 7 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="BrickShadow" parent="." instance=ExtResource( 1 )]
casting_node_name = "Sprite"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 40, 8, 8, 8 )

[node name="part_Points" type="Particles2D" parent="."]
emitting = false
amount = 200
lifetime = 2.0
one_shot = true
explosiveness = 0.82
randomness = 1.0
process_material = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 6 )
disabled = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
occluder = SubResource( 16 )

[node name="DetectArea" type="Area2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../DetectArea")
anims/outro = SubResource( 14 )

[node name="Sounds" type="Node" parent="."]

[node name="HitBulletBrick" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 3 )
volume_db = -7.0
bus = "GameSfx"

[node name="HitMisile" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 15 )
volume_db = -10.0
bus = "GameSfx"

[connection signal="body_entered" from="DetectArea" to="." method="_on_DetectArea_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
